--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.2",
     "@prisma/client": "^5.2.0",
+    "@tanstack/react-query": "^4.33.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "axios": "^1.5.0",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "react": "18.2.0",
